added POST, DELETE

--- a/front/index.html
+++ b/front/index.html
@@ -8,6 +8,11 @@
   <body>
     <div id="todolist"></div>
     <button id="todoBtn">GET TODOS</button>
+    <br />
+    <button id="addTodoBtn">ADD TODO</button>
+    <br />
+    ID: <input type="number" min="1" id="id_todo" />
+    <button id="deleteTodo">DELETE TODO</button>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
